--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="format-detection" content="telephone=no">
     <title>Panorama Viewer</title>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🕉️</text></svg>">
+    <link data-trunk rel="rust" data-cargo-no-default-features data-cargo-features="webxr" data-wasm-opt="z" />
     <link data-trunk rel="copy-file" href="assets"/>
     <style>
         * { box-sizing: border-box; }
