--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="theme-color" content="#1a1a2e">
     <meta name="format-detection" content="telephone=no">
-    <title>Panorama Viewer</title>
+    <title>Techno Sutra DEMO</title>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🕉️</text></svg>">
     <link data-trunk rel="rust" data-cargo-no-default-features data-cargo-features="webxr" data-wasm-opt="z" data-wasm-opt-params="--enable-bulk-memory --enable-nontrapping-float-to-int --enable-sign-ext" />
     <link data-trunk rel="copy-dir" href="assets"/>
@@ -141,7 +141,7 @@
 </head>
 <body>
     <div class="loading" id="loading">
-        <div>Loading Panorama Viewer</div>
+        <div>Loading Techno Sutra DEMO</div>
         <div class="loading-spinner"></div>
         <div class="loading-progress" id="progress">Initializing...</div>
     </div>
